<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dataset"
        android:title="@string/title_dataset" />

    <item
        android:id="@+id/navigation_fitur"
        android:icon="@drawable/ic_fitur"
        android:title="@string/title_fitur" />

    <item
        android:id="@+id/navigation_model"
        android:icon="@drawable/ic_model"
        android:title="@string/title_model" />

    <item
        android:id="@+id/navigation_simulasi"
        android:icon="@drawable/anatomical_heart"
        android:title="@string/title_sim" />



</menu>